# langchain-weaviate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml  codeql.yml  dependabot-auto-merge.yml  prebuild.yml  update-weaviate-server.yml
docs/: vectorstores.ipynb
langchain_weaviate/: _math.py  foo.py  utils.py  vectorstores.py
libs/weaviate/: Makefile  README.md  pyproject.toml
libs/weaviate/langchain_weaviate/: __init__.py  _math.py  _version.py  query_constructors.py  utils.py  vectorstores.py
libs/weaviate/tests/: docker-compose.yml
libs/weaviate/tests/unit_tests/: conftest.py  fake_embeddings.py  test__math.py  test_imports.py  test_math_simsimd_fallback.py  test_utils.py  test_vectorstores_additional.py  test_vectorstores_integration.py  test_vectorstores_integration_async.py  test_vectorstores_logger.py  test_vectorstores_unit.py
libs/weaviate/tests/unit_tests/query_constructors/: test_weaviate.py
tests/: docker-compose.yml
tests/integration_tests/: fake_docs.json  fake_embeddings.py  test_vectorstores.py
tests/unit_tests/: fake_embeddings.py  test__math.py  test_vectorstores.py  test_vectorstores_integration.py
weaviate/: Makefile  pyproject.toml
weaviate/docs/: vectorstores.ipynb
weaviate/langchain_weaviate/: utils.py  vectorstores.py
weaviate/tests/unit_tests/: test_vectorstores.py
